--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container">
-        <h2>Platonic Solids</h2>
+        <h2>Beauty is in everyone</h2>
         <div id="myCarousel" class="carousel slide" data-ride="carousel">
             <!-- Indicators -->
             <ol class="carousel-indicators">
